--- a/.github/workflows/acorn-tag.yaml
+++ b/.github/workflows/acorn-tag.yaml
@@ -21,4 +21,4 @@ jobs:
       - name: Build and Push
         run: |
           TAG=${GITHUB_REF#refs/*/}
-          acorn build --push -t ghcr.io/${{ github.repository }}:$TAG .
+          acorn build --push -t ghcr.io/timnicklas7/kubecon-demo:$TAG .
